Updated the documentation and freeze all requirement for the backend

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\Precision M4800\\anaconda3\\python.exe"
+  "python.pythonPath": "C:\\Users\\Precision M4800\\AppData\\Local\\Programs\\Python\\Python38\\python.exe",
+  "http.proxyAuthorization": null
 }
